Fix formatting in TransferableHelper#getAsset() and rein in the unnecessary use of nulls